2008-10-06 Bart Veer  <bartv@ecoscentric.com>

	* src/gen_framebufs.tcl, cdl/framebuf.cdl, tests/*: add some
	examples/testcases.

2007-10-11  Bart Veer  <bartv@ecoscentric.com>

	* include/framebuf.h: fix 555 true colour manipulation macros.

2006-04-05  John Dallaway  <jld@ecoscentric.com>

	* cdl/framebuf.cdl: Add reference to package documentation.

2005-11-21  Bart Veer  <bartv@ecoscentric.com>

	* include/framebuf.h, src/framebuf.c: fix aliasing of the
	make/break colour functions, needed with more recent compilers.

	* doc/framebuf.sgml: fix blanking support typo

	* cdl/framebuf.cdl: run gen_framebufs.tcl slightly later
	in the build process in case other packages create framebuf header
	files at build-time.

	* src/gen_framebufs.tcl: fix typo in diagnostic.

	* src/framebuf.c (cyg_fb_synch), include/framebuf.h
	(CYG_FB_FRAMEBUFFER): fix double buffer support.

2005-06-20  John Dallaway  <jld@ecoscentric.com>

	* doc/framebuf.sgml: Fix typographical errors.

2005-03-29  Bart Veer  <bartv@ecoscentric.com>

	* Generic framebuffer package created

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2008 Free Software Foundation, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,